--- a/nsr/build.gradle
+++ b/nsr/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 2
-        versionName "2.0"
+        versionName "2.0.1"
     }
 
     buildTypes {
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
