--- a/nsr/src/main/AndroidManifest.xml
+++ b/nsr/src/main/AndroidManifest.xml
@@ -12,13 +12,15 @@
 	<uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
 	<application>
-		<service
-			android:name="eu.neosurance.sdk.NSRJobService"
-			android:exported="false">
+		<receiver android:name="eu.neosurance.sdk.NSRBootReceiver">
 			<intent-filter>
-				<action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
 			</intent-filter>
-		</service>
+		</receiver>
+
+		<service
+			android:name="eu.neosurance.sdk.NSRLocationIntent"
+			android:exported="false" />
 		<service
 			android:name="eu.neosurance.sdk.NSRActivityIntent"
 			android:exported="false" />
