--- a/nsr/src/main/AndroidManifest.xml
+++ b/nsr/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
 			</intent-filter>
 		</receiver>
 		<receiver android:name="eu.neosurance.sdk.NSRActivityCallback" />
+		<receiver android:name="eu.neosurance.sdk.NSRDelayedPush" />
 
 		<service
 			android:name="eu.neosurance.sdk.NSRForeground"
