--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -1,8 +1,8 @@
-base_url = <base_url>
-code = <code>
-secret_key = <secret_key>
+base_url = https://sandbox.neosurancecloud.net/sdk/api/v1.0/
+code = ing
+secret_key = uBc4dyQeqp7miIAfis
 
-user.email = <user.email>
-user.code = <user.code>
-user.firstname = <user.firstname>
-user.lastname = <user.lastname>
+user.email = giovanni.tigli@gmail.com
+user.code = fake.giovanni.tigli
+user.firstname = gio
+user.lastname = gio
