--- a/nsr/src/main/AndroidManifest.xml
+++ b/nsr/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 	<uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
 	<application>
-		<receiver android:name="eu.neosurance.sdk.NSRBootReceiver">
+		<receiver android:name="eu.neosurance.sdk.NSRBootReceiver" android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
 			</intent-filter>
@@ -26,7 +26,7 @@
 			android:exported="false" />
 
 		<provider
-			android:name="android.support.v4.content.FileProvider"
+			android:name="androidx.core.content.FileProvider"
 			android:authorities="${applicationId}.provider"
 			android:exported="false"
 			android:grantUriPermissions="true">
